--- a/openapi/templates/package.mustache
+++ b/openapi/templates/package.mustache
@@ -24,7 +24,8 @@
     "ng-packagr": "^{{ngVersion}}",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
-    "typescript": "~5.9.0"
+    "typescript": "~5.9.0",
+    "tslib": "^2.0.0"
   }{{#npmRepository}},
   "publishConfig": {
     "registry": "{{{npmRepository}}}"
